--- a/assets/style.css
+++ b/assets/style.css
@@ -1,2 +1,42 @@
+body {
+    padding: 0;
+    margin: 0;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 18px;
+    line-height: 150%;
+    color: #333;
+    background: darkgrey;
+  }
+  
 
-Create event
+#pendingEvents{ 
+    width: 98%
+}
+.table table-bordered { 
+    width: 98%;
+    margin-right: 120px;
+    padding: 0;
+}
+
+#whoWhat { 
+    width: 96.8%;
+    margin-right: 120px;
+    padding: 0
+}
+
+
+#eventType { 
+    visibility: visible; 
+    transition-delay: 0s; 
+    border: none
+}
+
+
+
+@media only screen and (min-width: 480px){
+   
+}
+
+@media only screen and (min-width: 768px) {
+ 
+} 
